tests/expectations/compiler/array/array_too_small_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372076]: An array cannot be empty
    --> compiler-test:4:20
     |
   4 |     transition foo(a: [bool; 0]) -> bool {
     |                    ^
"""]
